[package]
name = "jsonnet-rs"
version = "0.6.0"
authors = ["Angus Lees <gus@inodes.org>"]
license = "Apache-2.0"
keywords = ["json", "jsonnet"]
readme = "README.md"
documentation = "https://docs.rs/jsonnet-rs"
repository = "https://github.com/anguslees/rust-jsonnet.git"
description = """
Bindings to libjsonnet (https://jsonnet.org/), a domain specific
configuration language that helps you define JSON data.
"""

[lib]
name = "jsonnet"

[dependencies]
libc = "0.2"
jsonnet-sys = { path = "jsonnet-sys", version = "0.6.0" }

[dev-dependencies]
clap = "2.31"
