[package]
name = "jsonnet-rs"
version = "0.17.0"
authors = ["Angus Lees <gus@inodes.org>"]
license = "Apache-2.0"
keywords = ["json", "jsonnet"]
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/jsonnet-rs"
repository = "https://github.com/anguslees/rust-jsonnet.git"
description = """
Bindings to libjsonnet (https://jsonnet.org/), a domain specific
configuration language that helps you define JSON data.
"""

[lib]
name = "jsonnet"

[dependencies]
libc = "0.2"
jsonnet-sys = { path = "jsonnet-sys", version = "0.17.0" }

[dev-dependencies]
clap = "4.1"
